--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
   <main class="hero">
     <h1>Learn money. Simply.</h1>
     <p>Personal finance, investing & trading—short lessons and practical tools.</p>
-    <div class="cta-row">
+<div class="cta-row">
   <a class="btn big btn-primary" href="/lessons/index.html">Learn Personal Finance</a>
-  <a class="btn big" href="/trading/index.html">Learn Stock Trading</a>
+  <a class="btn big" href="/trading/lessons.html">Learn Stock Trading</a>
 </div>
   </main>
 
