Fix className -> class in index.html

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <h3>Watchlist</h3>
         <div class="row gap">
           <button id="btnAddTicker" class="btn">Add Ticker</button>
-          <button id="btnRefreshQuotes" className="btn secondary">Refresh Prices</button>
+          <button id="btnRefreshQuotes" class="btn secondary">Refresh Prices</button>
         </div>
       </div>
       <div id="watchTable" class="card scroll"></div>
