Fix auth panel mobile layout: stacked inputs, visible password field

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
   <script defer src="data.js"></script>
   <script defer src="rbac.js"></script>
   <script defer src="app.js"></script>
+  <script>
+  // When running without netlify dev, set this to your live site origin:
+  // window.FN_BASE = "https://<your-site>.netlify.app";
+</script>
+
 </head>
 <body>
   <header class="topbar">
